some common fixes done

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <body>
     <section class="bg-blue">
         <div class="container">
-            <nav class="padding-top">
+            <nahv class="padding-top">
                 <div class=" d-flex js-space-between align-item">
-                    <a href="" class="z-index"><h1 class="ff-poppins fw-600 fs-26 color-white ">chat<span class="ff-poppins fw-300 fs-26 color-white ">app</span></h1></a>
+                    <a href="" class="z-index"><p class="ff-poppins fw-600 fs-26 color-white ">chat<span class="ff-poppins fw-300 fs-26 color-white ">app</span></p></a>
                     <label for="icon-box">
                         <span></span>
                         <span></span>
                         <span></span>
                     </label>
                     <input type="checkbox" id="icon-box" hidden >
-                    <ul class="d-flex gap align-item nav-hide">
-                            <li><a class="ff-roboto fw-500 fs-14 color-white" href="">Proudct</a></li>
-                            <li><a class="ff-roboto fw-500 fs-14 color-white" href="">Services</a></li>
-                            <li><a class="ff-roboto fw-500 fs-14 color-white" href="">Contact</a></li>
-                            <li><a class="ff-roboto fw-500 fs-14 color-white" href="">Log In</a></li>
-                            <div class="button">Try It Free</div>
-                    </ul>
+                    <div class="d-flex gap align-item nav-hide">
+                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Proudct</a>
+                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Services</a>
+                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Contact</a>
+                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Log In</a>
+                            <span class="button">Try It Free</span>
+                    </div>
                 </div>
               </nav>
             <div class="row">
