scroll bar in nav and photo position on full hd size fixed and some minor changes are there

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 </head>
 
 <body>
-    <section class="bg-blue">
-        <div class="container">
-            <nahv class="padding-top">
-                <div class=" d-flex js-space-between align-item">
-                    <a href="" class="z-index"><p class="ff-poppins fw-600 fs-26 color-white ">chat<span class="ff-poppins fw-300 fs-26 color-white ">app</span></p></a>
-                    <label for="icon-box">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </label>
-                    <input type="checkbox" id="icon-box" hidden >
-                    <div class="d-flex gap align-item nav-hide">
-                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Proudct</a>
-                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Services</a>
-                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Contact</a>
-                            <a class="ff-roboto fw-500 fs-14 color-white" href="">Log In</a>
-                            <span class="button">Try It Free</span>
-                    </div>
-                </div>
-              </nav>
+    <nav class=" position-sticky nav-color">
+        <div class=" d-flex js-space-between js-center">
+            <a href="" class="z-index "><p class="ff-poppins fw-600 fs-26 color-white ">chat<span class="ff-poppins fw-300 fs-26 color-white ">app</span></p></a>
+            <label for="icon-box">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <input type="checkbox" id="icon-box" hidden >
+            <div class="d-flex gap  nav-hide align-items-center">
+                    <a class="ff-roboto fw-500 fs-14 color-white" href="">Proudct</a>
+                    <a class="ff-roboto fw-500 fs-14 color-white" href="">Services</a>
+                    <a class="ff-roboto fw-500 fs-14 color-white" href="">Contact</a>
+                    <a class="ff-roboto fw-500 fs-14 color-white" href="">Log In</a>
+                    <span class="button">Try It Free</span>
+            </div>
+        </div>
+    </nav>
+    <section class="bg-blue ">
+        <div class="container ">
             <div class="row">
                 <div class="col-6 padding_top_bottom3 padding_top_bottom3-xsm padding-md-top col-md-12 text-md-center color-white">
                     <h1 class="ff-poppins fs-75 fw-600 fs-45-md fw-500-md ff-poppins-md color-md-white">
@@ -114,30 +114,30 @@
                 </div>
                 <div class="col-8 col-4-s padding-top2 padding-top2-md">
                     <div class="row js-space-between">
-                        <ul class="col-xsm-3" >
+                        <ul class="col-xsm-3">
                             <li class="ff-poppins fw-400 fs-18 padding-bottom">Help</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">Support</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">Knowledgebase</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">Tutorials</li>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">Support</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">Knowledgebase</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">Tutorials</li></a>
                         </ul>
                         <ul class="col-xsm-3">
                             <li class="ff-poppins fw-400 fs-18 padding-bottom">Features</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">Screen Sharing</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">iOS & Android Apps</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">File Sharing</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">User Management</li>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">Screen Sharing</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">iOS & Android Apps</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">File Sharing</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">User Management</li></a>
                         </ul>
                         <ul class="col-xsm-3 padding-top-xsm">
                             <li class="ff-poppins fw-400 fs-18 padding-bottom">Company</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">About Us</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">Careers</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">Contact Us</li>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">About Us</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">Careers</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">Contact Us</li></a>
                         </ul>
                         <ul class="col-xsm-3 padding-top-xsm">
                             <li class="ff-poppins fw-400 fs-18 padding-bottom">Contact Us</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">info@chatapp.com</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">1-800-200-300</li>
-                            <li class="ff-roboto fw-400 fs-13 padding-bottom1">3500 Deer Creek Rd<br>Palo Alto, CA</li>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">info@chatapp.com</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">1-800-200-300</li></a>
+                            <a href=""><li class="ff-roboto fw-400 fs-13 padding-bottom1 color-black">3500 Deer Creek Rd<br>Palo Alto, CA</li></a>
                         </ul>
                     </div>
                 </div>
